Fix video on mobile

--- a/src/components/ProjectSlides/Amazon2Ali.css
+++ b/src/components/ProjectSlides/Amazon2Ali.css
@@ -3,3 +3,10 @@
     width: 95%;
     margin: auto;
 }
+
+.amazon2ali__video{
+    max-width: 560px;
+    min-height: 315px;
+    width: 95%;
+    margin: auto;
+}
